2004-08-19  Mark Mitchell  <mark@codesourcery.com>

	* configure.tgt (arm*-*-symbianelf*): New target.
	(arm*-*-eabi*): Likewise.

2004-08-19  Jakub Jelinek  <jakub@redhat.com>

	* emultempl/ppc64elf.em (non_overlapping_opd): New variable.
	(ppc_before_allocation): Pass it to ppc64_elf_edit_opd).
	(OPTION_NON_OVERLAPPING_OPD): Define.
	(PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_ARGS_CASES): Add
	--non-overlapping-opd option.

2004-08-18  Alan Modra  <amodra@bigpond.net.au>

	PR 338
	* ldexp.c (fold_name): Don't call bfd_link_add_undef if the symbol
	was already on the undefs list.

2004-08-17  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_new_vers_pattern): Dot
	prefix the symbol field too.

2004-08-13  Alan Modra  <amodra@bigpond.net.au>

	* ldmain.c (link_callbacks): Remove "error_handler".
	* ldmisc.c: Include elf-bfd.h.
	(vfinfo): Sort comment.  Handle %A.  Use %A instead of
	bfd_get_section_indent.
	(error_handler): Delete.
	* ldmisc.h (error_handler): Delete declaration.

2004-08-10  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_finish): Call
	ppc64_elf_restore_symbols.

2004-08-09  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_finish): Error if
	.toc is too large on relocatable linking.

2004-08-09  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (ppc_after_open): Delete.
	(LDEMUL_AFTER_OPEN): Don't define.

2004-08-02  Stephane Carrez  <stcarrez@nerim.fr>

	* ld.texinfo (Top): Document specific options of 68HC11 and 68HC12.

2004-08-01  Stephane Carrez  <stcarrez@nerim.fr>

	* scripttempl/elfm68hc12.sc: Align text, rodata and data section
	on power of 2.

2004-07-27  Jason Thorpe  <thorpej@wasabisystems.com>

	* emulparams/hppanbsd.sh (OUTPUT_FORMAT): Set to "elf32-hppa-netbsd".

2004-07-26  Dmitry Diky  <diwil@spec.ru>

	* Makefile.am: Add new subtargets: msp430x1610, msp430x1611,